RewardsPackage/force-app/main/default/objects/Reward__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>The amount of points required to redeem this Reward</description>
    <inlineHelpText>The amount of points required to redeem this Reward</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>