RewardsPackage/force-app/main/default/objects/Reward__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>Reward image to display in redemption screens. Suggested 300 x 300 pixels.</description>
    <inlineHelpText>Reward image to display in redemption screens. Suggested 300 x 300 pixels.</inlineHelpText>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>