RewardsPackage/force-app/main/default/objects/Reward__c/fields/Redemption_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Instructions__c</fullName>
    <description>Instructions for external users on how to collect their redeemed reward</description>
    <inlineHelpText>Instructions for external users on how to collect their redeemed reward</inlineHelpText>
    <label>Redemption Instructions</label>
    <type>TextArea</type>
</CustomField>